[tool.poetry]
name = "deep-learning-part2"
version = "0.1.0"
description = ""
authors = ["Tom Wüsten"]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
sklearn = "^0.0"
seaborn = "^0.11.2"
tensorboard = "^2.9.1"
imblearn = "^0.0"
install = "^1.3.5"
pytorch-lightning = "^1.6.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
jupyter-black = "^0.3.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

